PHPとの簡易連携を開始
